    Special thanks to Omegamatrix of AtariAge for test ROMs in this area.

  * Modified hotkey for "Change console palette" (Control-f) to also
    change the display properties of the TIA.  This allows you to switch
    between NTSC/PAL/SECAM (and variant) modes dynamically.  Related to
    this, added Shift-Control-f key to step backwards through the
    available modes.

  * Fixed several bugs in DPC+ bankswitching scheme, including ability
    to load and save state files.  As well, ROMs now work correctly after
    console format autodetection.

  * Fixed bugs in handling relative filenames on the commandline,
    introduced in the last release.  The new functionality should be much
    more robust.

  * Updated included ZLib library to latest stable version.

-Have fun!


3.6.1 to 3.7: (June 1, 2012)

  * Added Blargg TV effects, with presets for Composite, S-video, RGB,
    and badly adjusted TV, and well as a custom mode with full
    configurability of contrast, brightness, gamma, etc.  Many
    keyboard shortcuts and commandline arguments were added to support
    this; see the documentation for a detailed explanation.  These
    effects are OpenGL-only.  Special thanks to Ian Bogost and the
    Georgia Tech Atari Team for the preliminary implementation.

  * Updated the CompuMate keyboard handler to recognize more keys on an
    actual keyboard, instead of having to remember the weird combinations
    used on the original CompuMate keyboard (although those original keys
    will continue to work).  Related to this, fixed bug whereby
    'ghost keys' would be detected by the CompuMate, particularly after
    pressing 'Enter' to start a game from the ROM launcher.

  * Added emulation for MindLink controller using the mouse; the 'Bionic
    Breakthrough' and 'Telepathy' ROMs now work.

  * Updated FA2 bankswitch scheme (Star Castle) to emulate load/save
    high score functionality to the Harmony cart flash RAM.
